--- a/View/Master/AccessDenied.html.twig
+++ b/View/Master/AccessDenied.html.twig
@@ -4,7 +4,7 @@
     <div class="body-section">
         <div class="container grid-lg">
             <div class="columns">
-                <div class="column col-12">
+                <div class="column">
                     <div class="empty">
                         <div class="empty-icon">
                             <i class="fas fa-lock fa-5x" aria-hidden="true"></i>
