--- a/View/Master/LoginToContinue.html.twig
+++ b/View/Master/LoginToContinue.html.twig
@@ -4,7 +4,7 @@
     <div class="body-section">
         <div class="container grid-lg">
             <div class="columns">
-                <div class="column col-12">
+                <div class="column">
                     {% if fsc.contact %}
                         <div class="empty">
                             <div class="empty-icon">
