--- a/View/Section/EditProfile.html.twig
+++ b/View/Section/EditProfile.html.twig
@@ -1,5 +1,4 @@
-<br/>
-<div class="container">
+<div class="container mt-2">
     <div class="columns">
         <div class="column col-2 col-sm-12 text-right">
             {% block profileImage %}
